--- a/webapp/app/less/component.less
+++ b/webapp/app/less/component.less
@@ -839,3 +839,25 @@ span.input-icon {
   margin-top: 0px !important;
   margin-bottom: 0px !important;
 }
+
+//style choosen for bootstrap3
+.chosen-container-single .chosen-single {
+  height: 30px;
+  border-radius: 3px;
+  border: 1px solid #CCCCCC;
+}
+.chosen-container-single .chosen-single span {
+  padding-top: 2px;
+}
+.chosen-container-single .chosen-single div b {
+  margin-top: 2px;
+}
+.chosen-container-active .chosen-single,
+.chosen-container-active.chosen-with-drop .chosen-single {
+  border-color: #ccc;
+  border-color: rgba(82, 168, 236, .8);
+  outline: 0;
+  outline: thin dotted \9;
+  -moz-box-shadow: 0 0 8px rgba(82, 168, 236, .6);
+  box-shadow: 0 0 8px rgba(82, 168, 236, .6)
+}
