add start&end date for hbase info in cubeDesigner KYLIN-637

--- a/webapp/app/partials/cubes/cubes.html
+++ b/webapp/app/partials/cubes/cubes.html
@@ -32,7 +32,7 @@
     <!--Cube Name-->
     <div class="col-xs-3">
         <form ng-submit="cubeList.removeAll();list()" style="display: inline" >
-            <span class="input-icon input-icon-right nav-search"><b>Cube Name:</b>
+            <span class="input-icon input-icon-right nav-search" style="font-size:14px;"><b>Cube Name:</b>
                 <input type="text" placeholder="Filter ..." class="nav-search-input" ng-model="listParams.cubeName" />
                 <i class="ace-icon fa fa-search blue" ng-click="cubeList.removeAll();list()"></i>
             </span>
