reset default call-out style in new adminLte version

--- a/webapp/app/less/component.less
+++ b/webapp/app/less/component.less
@@ -861,3 +861,35 @@ span.input-icon {
   -moz-box-shadow: 0 0 8px rgba(82, 168, 236, .6);
   box-shadow: 0 0 8px rgba(82, 168, 236, .6)
 }
+
+
+//override callout info in AdinLTE.css
+.callout {
+   margin: 0 0 20px 0 !important;
+   padding: 15px 30px 15px 15px !important;
+   border-left: 5px solid #eee !important;
+   color: black !important;
+ }
+
+.callout.callout-info {
+  background-color: #f0f7fd !important;
+  border-color: #d0e3f0 !important;
+  color: black !important;
+}
+
+.callout.callout-danger {
+  background-color: #fcf2f2  !important;
+  border-color: #dFb5b4  !important;
+  color: black !important;
+}
+
+ul.messenger-theme-ice .messenger-message{
+  color:#666667 !important;
+}
+.messenger-message.alert{
+  background-color: #f6f6f6 !important;
+}
+
+.model-dimension-edit .chosen-container{
+  width:100% !important;
+}
