--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -375,7 +375,7 @@ input.ng-invalid-required:after {
 
 .nav-pills>li {
 cursor: pointer;
-background-color: #094868;
+//background-color: #094868;
 }
 
 .alert-info {
